--- a/public/main-gb-full-27.html
+++ b/public/main-gb-full-27.html
@@ -118,6 +118,7 @@
       const sessions = new Map();
   const retryCounts = new Map();
   const fallbackNicknames = new Set();
+  const forcedFallbackOverrides = new Set();
       let fallbackTimer = null;
       let fallbackTimerNickname = null;
 
@@ -292,6 +293,67 @@
           fallbackTimer = null;
           fallbackTimerNickname = null;
         }
+      }
+
+      function applyForcedFallbackList(list) {
+        const updated = new Set();
+        if (Array.isArray(list)) {
+          for (const value of list) {
+            const normalized = normalizeNickname(value);
+            if (normalized) {
+              updated.add(normalized.toLowerCase());
+            }
+          }
+        }
+
+        let changed = false;
+        if (updated.size !== forcedFallbackOverrides.size) {
+          changed = true;
+        } else {
+          for (const name of forcedFallbackOverrides) {
+            if (!updated.has(name)) {
+              changed = true;
+              break;
+            }
+          }
+        }
+
+        if (!changed) {
+          return;
+        }
+
+        const affected = new Set();
+        for (const name of forcedFallbackOverrides) {
+          affected.add(name);
+        }
+        for (const name of updated) {
+          affected.add(name);
+        }
+
+        forcedFallbackOverrides.clear();
+        for (const name of updated) {
+          forcedFallbackOverrides.add(name);
+        }
+
+        for (const nickname of Array.from(sessions.keys())) {
+          const normalized = normalizeNickname(nickname);
+          if (!normalized) {
+            continue;
+          }
+          if (affected.has(normalized.toLowerCase())) {
+            restartSession(nickname, { failed: true });
+          }
+        }
+
+        syncSessions();
+      }
+
+      function hasForcedFallback(nickname) {
+        const normalized = normalizeNickname(nickname);
+        if (!normalized) {
+          return false;
+        }
+        return forcedFallbackOverrides.has(normalized.toLowerCase());
       }
 
       function hideVideoLayer(video) {
@@ -501,7 +563,7 @@
           return;
         }
 
-        if (!hasWebRTC) {
+        if (!hasWebRTC || hasForcedFallback(nickname)) {
           activateFallback(nickname);
           return;
         }
@@ -752,6 +814,7 @@
           case "WELCOME":
             handleActivePublishers(payload.publishers);
             handleFocusUpdate(payload.currentFocus);
+            applyForcedFallbackList(payload.forcedFallback);
             break;
           case "STATE_UPDATE":
             handleFocusUpdate(payload.currentFocus);
@@ -762,6 +825,9 @@
             break;
           case "ACTIVE_PUBLISHERS":
             handleActivePublishers(payload.publishers);
+            break;
+          case "FORCED_FALLBACK":
+            applyForcedFallbackList(payload.nicknames);
             break;
           case "SIGNAL_PUBLISHER_ANSWER":
             handlePublisherAnswer(payload);
