--- a/public/t-side-gb-27.html
+++ b/public/t-side-gb-27.html
@@ -203,7 +203,6 @@
       }
     }
   </style>
-  <script src="js/webrtc-support.js"></script>
 </head>
 <body data-team="T">
   <div class="stage">
@@ -220,6 +219,6 @@
   <script>
     window.TEAM_KEY = "T";
   </script>
-  <script src="team-common.js"></script>
+  <script type="module" src="team-common.js"></script>
 </body>
 </html>
