--- a/public/register.html
+++ b/public/register.html
@@ -206,10 +206,11 @@
   </div>
 
   <script type="module">
-    import { API_BASE, WS_BASE } from "./js/endpoints.js";
+    import { API_BASE, WS_BASE, LOGO_DB_PROXY } from "./js/endpoints.js";
     window.API_BASE = API_BASE;
     window.WS_BASE = WS_BASE;
-    console.log("[BOOT] API_BASE=", API_BASE, "WS_BASE=", WS_BASE);
+    window.LOGO_DB_PROXY = LOGO_DB_PROXY;
+    console.log("[BOOT] API_BASE=", API_BASE, "WS_BASE=", WS_BASE, "LOGO_DB_PROXY=", LOGO_DB_PROXY);
   </script>
 
   <script type="module">
@@ -588,7 +589,27 @@
               }
 
               const payload = await response.json();
-              populateSelect(payload.players || []);
+              const playerList = Array.isArray(payload?.players) ? payload.players : [];
+              const names = [];
+              const seen = new Set();
+              for (const player of playerList) {
+                const nameValue = typeof player?.name === "string" && player.name.trim()
+                  ? player.name.trim()
+                  : typeof player?.id === "string"
+                  ? player.id
+                  : "";
+                if (!nameValue) {
+                  continue;
+                }
+                const key = nameValue.toLowerCase();
+                if (seen.has(key)) {
+                  continue;
+                }
+                seen.add(key);
+                names.push(nameValue);
+              }
+
+              populateSelect(names);
               updateApplyButtonState();
             } catch (error) {
               status.textContent = "Unable to load players. Try refreshing later.";
